force-app/main/default/objects/manager__c/manager__c.object-meta.xml
<CustomObject>
    <label>Manager</label>
    <nameField>
        <label>manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manager</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>