force-app/main/default/objects/manager__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR (TODAY())-YEAR ( Birth_date__c )-
IF
(MONTH (TODAY())&lt;MONTH(Birth_date__c) ||
(MONTH(TODAY())=MONTH(Birth_date__c) &amp;&amp; DAY(TODAY()) &lt; DAY(Birth_date__c)),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>