force-app/main/default/objects/manager__c/fields/Birth_date__c.field-meta.xml
<CustomField>
    <fullName>Birth_date__c</fullName>
    <description>Stores the Birth date</description>
    <label>Birth date</label>
    <type>Date</type>
</CustomField>