force-app/main/default/objects/manager__c/fields/Departmnet__c.field-meta.xml
<CustomField>
    <fullName>Departmnet__c</fullName>
    <label>Departmnet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>QA/OPERATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>