force-app/main/default/objects/manager__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Manager for Project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Manager</relationshipLabel>
    <relationshipName>Manager</relationshipName>
    <type>Lookup</type>
</CustomField>